`cmake`.  This makes [cmake](http://www.cmake.org/) a requirement to
build ctwm.  See the `README` file for how to run it.

### Removed Features

1. Support for the SDSC imconv library, and the IMCONV options related to
    it, has been removed.  The last release is almost 20 years old, and
    doesn't support any remotely recent platforms.

### User Visible Changes

1. Selected a number of cleanups from Stefan Monnier
    <<monnier@IRO.UMontreal.CA>>, including rate-limiting of animations
    using a new `_XA_WM_END_OF_ANIMATION` message.  Font height is
    estimated based on used characters only.  Added some similar changes,
    improved the prevention of placing windows off-screen, the
    `f.rescuewindows` function for emergencies, a hack-fix for
    `f.adoptwindow`. More virtual screen tweaks/fixes.

1. Added the remaining OnTopPriority changes from Stefan Monnier
    <<monnier@IRO.UMontreal.CA>>: AutoPopup, AutoPriority, OnTopPriority,
    PrioritySwitching, f.changepriority, f.priorityswitching,
    f.setpriority, f.switchpriority, f.tinylower, f.tinyraise. Currently
    consistency checking code is enabled, which will terminate with an
    assertion failure if something unexpected happens. Smoothed out
    various inconsistencies that this check discovered when virtual
    screens are used.

1. Basic support for EWMH (Extended Window Manager Hints) added and
    enabled by default.  EWMHIgnore {} config option allows selectively
    disabling bits.
    [Olaf "Rhialto" Seibert, Matthew Fuller]

1. Icon manager windows are no longer included in the window ring
    (that had confusing effects on the focus sequence).

### Internals

1. A new code style has been chosen and the entire codebase reformatted
    into it.  Configs for
    [Artistic Style](http://astyle.sourceforge.net/)
    to generate the proper output are in the source tree.



## 3.8.2  (2014-05-18)

1. Various code cleanups.

    * Cleanup re: raising and warping to windows (previous location of